<resources>
    <string name="app_name">Ukulele Chords</string>
    <string name="button_chord_c">C</string>
    <string name="button_chord_d">D</string>
    <string name="button_chord_e">E</string>
    <string name="button_chord_f">F</string>
    <string name="button_chord_g">G</string>
    <string name="button_chord_a">A</string>
    <string name="button_chord_b">B</string>
    <string name="button_chord_gb">Gb</string>
    <string name="button_chord_db">Db</string>
    <string name="button_chord_eb">Eb</string>
    <string name="button_chord_ab">Ab</string>
    <string name="button_chord_bb">Bb</string>
</resources>
